<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abtest_confirm">确认</string>
    <string name="abtest_edit">文本编辑</string>
    <string name="abtest_login">Login</string>
    <string name="abtest_manager">ABTest管理器</string>
    <string name="abtest_name">ABTest</string>
    <string name="abtest_parameter">参数</string>
    <string name="abtest_valid">有效</string>
    <string name="abtest_valid_not">无效</string>
    <string name="ad">expect</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Eye Drawing</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_gdpr_advertising_partners_screen_message">As explained in our Privacy Policy, with your consent, we may share this data with the following partners to allow them to serve personalized ads or content:</string>
    <string name="applovin_gdpr_advertising_partners_screen_title">Personalized Ads and Content</string>
    <string name="applovin_gdpr_analytics_partners_screen_message">As explained in our Privacy Policy, with your consent, we may share this data with the following partners to help measure performance and improve our products and services:</string>
    <string name="applovin_gdpr_analytics_partners_screen_title">Performance Measurements and Product Development</string>
    <string name="applovin_gdpr_are_you_sure_screen_message">"Allowing us and/or our partners to use this data for personalized ads and content and other purposes, as described in our Privacy Policy:

• Gives you a more personalized experience, ads, and content

• Helps support product improvements and developments

• Allows you to participate in promotions"</string>
    <string name="applovin_gdpr_are_you_sure_screen_title">Are you sure?</string>
    <string name="applovin_gdpr_back_button_text">Back</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_1">Helping keep our App free!</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_2">Giving you a more personal experience, including personalized ads and content</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_3">Helping support product improvements and developments</string>
    <string name="applovin_gdpr_learn_more_screen_bullet_4">Allowing you to participate in promotions</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_logout_bt">Log out</string>
    <string name="ew_policy_real_name_auth_id_card">身份证号码：</string>
    <string name="ew_policy_real_name_auth_id_card_hint">填写您的身份证号码</string>
    <string name="ew_policy_real_name_auth_msg">根据国家新闻出版署的相关要求游戏用户需要进行实名认证。</string>
    <string name="ew_policy_real_name_auth_name">真实姓名：</string>
    <string name="ew_policy_real_name_auth_name_hint">填写您身份证上的姓名</string>
    <string name="ew_policy_real_name_auth_title">实名认证</string>
    <string name="ew_policy_submit">提交</string>
    <string name="feedback_continue">Continue</string>
    <string name="feedback_hint_contact">Please enter your email address</string>
    <string name="feedback_hint_question">Please enter your feedback</string>
    <string name="feedback_import">Import</string>
    <string name="feedback_in_app_hint_text">"1. If you did not receive the items after purchasing, please restart the game and check it again.

2. You may need to wait for 24 hours. If you didn't receive the items after 24 hours, please provide us with detailed feedback and a screenshot of the order receipt. We will solve the problem for you as soon as possible."</string>
    <string name="feedback_in_app_link">View Order Receipt</string>
    <string name="feedback_in_app_screenshot">Receipt Screenshot</string>
    <string name="feedback_in_app_tint">Please describe the in-app purchase problem by providing the details, including the quantity of purchased items and the approximate time of the purchase.</string>
    <string name="feedback_ok">Confirm</string>
    <string name="feedback_prev">Back</string>
    <string name="feedback_recreate">Repeat Feedback</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_tint">Tip</string>
    <string name="feedback_tint_message">Your previous feedback was not finished, do you want to import your previous content?</string>
    <string name="feedback_title_contact">Contact Info</string>
    <string name="feedback_title_question">Specific problem</string>
    <string name="feedback_title_screenshot">Screenshot of Issue (Optional)</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="setting_logout_tip">Your data cannot be saved unless you log in again to sync.</string>
    <string name="setting_logout_title">Log in to sync data</string>
    <string name="subscription_instructions">Subscription Instructions</string>
    <string name="subscription_instructions_detailed">With a subscription, you have unlimited access to all features. After the subscription ends, the Google Play Store will automatically renew according to the subscription method you selected, and the relevant fees will be deducted from your Google account. You can cancel the subscription from the subscription option in the menu of Play Store.</string>
    <string name="subscription_service">Subscription Service</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_detailed">You can cancel your subscription at any time, go to the menu in the upper left corner of the Google Store - Subscription Options - Cancel Subscription</string>
</resources>