<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/feedback_root_layout" android:background="?feedbackDialogBackground" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/feedback_recovery_root" android:paddingLeft="24.0dip" android:paddingTop="32.0dip" android:paddingRight="24.0dip" android:paddingBottom="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="?feedbackTextPrimaryColor" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_tint" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:textColor="?feedbackTextPrimaryColor" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/feedback_tint_message" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <androidx.appcompat.widget.AppCompatButton android:id="@id/feedback_recreate" android:layout_width="0.0dip" android:text="@string/feedback_recreate" android:layout_weight="1.0" style="@style/FeedbackPrevButtonStyle" />
            <View android:visibility="invisible" android:layout_width="8.0dip" android:layout_height="0.0dip" />
            <androidx.appcompat.widget.AppCompatButton android:id="@id/feedback_import" android:layout_width="0.0dip" android:text="@string/feedback_import" android:layout_weight="1.0" style="@style/FeedbackSubmitButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/feedback_debug_view" android:visibility="gone" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/feedback_recovery_root" android:layout_alignBottom="@id/feedback_recovery_root" android:layout_centerVertical="true" />
</RelativeLayout>