<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/feedback_in_app_hint" android:paddingLeft="@dimen/feedback_margin_big" android:paddingRight="@dimen/feedback_margin_big" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/feedback_margin_normal"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textColor="?feedbackTextPrimaryColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_in_app_hint_text" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="#ff0080ff" android:layout_gravity="center_horizontal" android:id="@id/feedback_query_order" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/feedback_in_app_link" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton android:id="@id/feedback_continue" android:layout_width="fill_parent" android:layout_marginTop="@dimen/feedback_margin_normal" android:text="@string/feedback_continue" android:layout_weight="0.0" style="@style/FeedbackSubmitButtonStyle" />
</LinearLayout>