<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/ew_policy_dialog_bg" android:layout_width="@dimen/ew_policy_dialog_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/ew_policy_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ew_policy_close" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="19.0dip" android:textStyle="bold" android:textColor="@color/ew_policy_primary_text_color" android:id="@id/ew_real_name_auth_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/ew_policy_real_name_auth_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0dip" android:textColor="@color/ew_policy_primary_text_color" android:gravity="center" android:id="@id/ew_real_name_auth_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="23.0dip" android:text="@string/ew_policy_real_name_auth_msg" app:layout_constraintTop_toBottomOf="@id/ew_real_name_auth_title" />
    <TextView android:textSize="12.0dip" android:textColor="@color/ew_policy_primary_text_color" android:id="@id/ew_real_name_auth_name_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/ew_policy_real_name_auth_name" app:layout_constraintLeft_toLeftOf="@id/ew_real_name_auth_desc" app:layout_constraintTop_toBottomOf="@id/ew_real_name_auth_desc" />
    <EditText android:textSize="14.0dip" android:textColor="@color/ew_policy_edittext_color_selector" android:textColorHint="@color/ew_policy_hint_text_color" android:gravity="center_vertical" android:id="@id/ew_policy_name_input" android:background="@drawable/ew_policy_edittext_bg" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="0.0px" android:layout_height="42.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="20.0dip" android:hint="@string/ew_policy_real_name_auth_name_hint" android:lines="1" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/ew_real_name_auth_name_tip" />
    <TextView android:textSize="12.0dip" android:textColor="@color/ew_policy_primary_text_color" android:id="@id/ew_real_name_auth_id_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ew_policy_real_name_auth_id_card" android:lines="1" app:layout_constraintLeft_toLeftOf="@id/ew_real_name_auth_name_tip" app:layout_constraintTop_toBottomOf="@id/ew_policy_name_input" />
    <EditText android:textSize="14.0dip" android:textColor="@color/ew_policy_edittext_color_selector" android:textColorHint="@color/ew_policy_hint_text_color" android:gravity="center_vertical" android:id="@id/ew_policy_id_card_input" android:background="@drawable/ew_policy_edittext_bg" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="0.0px" android:layout_height="42.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="20.0dip" android:hint="@string/ew_policy_real_name_auth_id_card_hint" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/ew_real_name_auth_id_tip" />
    <Button android:textColor="@color/ew_policy_button_text_color" android:layout_gravity="center" android:id="@id/ew_policy_submit" android:background="@drawable/ew_policy_btn" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="52.0dip" android:layout_marginBottom="42.0dip" android:minWidth="187.0dip" android:minHeight="44.0dip" android:text="@string/ew_policy_submit" android:drawablePadding="18.0dip" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/ew_policy_id_card_input" />
    <ProgressBar android:id="@id/ew_policy_progress_bar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="0.0px" android:layout_marginTop="12.0dip" android:layout_marginRight="110.0dip" android:layout_marginBottom="12.0dip" app:layout_constraintBottom_toBottomOf="@id/ew_policy_submit" app:layout_constraintLeft_toLeftOf="@id/ew_policy_submit" app:layout_constraintRight_toRightOf="@id/ew_policy_submit" app:layout_constraintTop_toTopOf="@id/ew_policy_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>