<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#66000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:layout_gravity="bottom" android:orientation="vertical" android:background="@drawable/dialog_login_switch_box_bg" android:paddingBottom="@dimen/app_dp_36" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/app_dp_16">
            <TextView android:textSize="@dimen/app_sp_24" android:textStyle="bold" android:textColor="@color/app_black" android:gravity="center" android:paddingLeft="@dimen/app_dp_38" android:paddingRight="@dimen/app_dp_38" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_logout_title" android:layout_centerInParent="true" />
            <ImageView android:id="@id/ivClose" android:padding="@dimen/app_dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_setting_logout_x" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/app_sp_16" android:textColor="@color/app_text_gray" android:gravity="center" android:layout_width="293.0dip" android:layout_height="wrap_content" android:text="@string/setting_logout_tip" />
        <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:id="@id/llCancel" android:background="@drawable/dialog_logout_bt_1" android:layout_width="300.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/app_dp_24">
            <TextView android:textSize="@dimen/app_text_size_m" android:textStyle="bold" android:textColor="@color/app_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/app_dp_16" android:text="@string/cancel" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout android:gravity="center" android:id="@id/llLogout" android:background="@drawable/dialog_logout_bt_2" android:layout_width="300.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/app_dp_16">
            <TextView android:textSize="@dimen/app_text_size_m" android:textStyle="bold" android:textColor="@color/app_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/app_dp_16" android:text="@string/dialog_logout_bt" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>